@@ -2,29 +2,27 @@ package com.devin.simpletools_server.service.v1.login.impl;
 
 import cn.hutool.core.util.StrUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
-import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.devin.simpletools_server.common.utils.AssertUtil;
-import com.devin.simpletools_server.domain.eneity.login.Users;
 import com.devin.simpletools_server.domain.eneity.login.WxUser;
-import com.devin.simpletools_server.mapper.v1.login.UsersMapper;
 import com.devin.simpletools_server.mapper.v1.login.WxUserMapper;
 import com.devin.simpletools_server.service.v1.builder.TextBuilder;
 import com.devin.simpletools_server.service.v1.builder.UserBuilder;
 import com.devin.simpletools_server.service.v1.login.LoginService;
 import com.devin.simpletools_server.service.v1.login.WxMsgService;
-import lombok.AllArgsConstructor;
+import com.devin.simpletools_server.websocket.WebSocketService;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import me.chanjar.weixin.common.bean.WxOAuth2UserInfo;
 import me.chanjar.weixin.mp.api.WxMpService;
+import me.chanjar.weixin.mp.bean.kefu.WxMpKefuMessage;
 import me.chanjar.weixin.mp.bean.message.WxMpXmlMessage;
 import me.chanjar.weixin.mp.bean.message.WxMpXmlOutMessage;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
 
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
 import java.net.URLEncoder;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
@@ -51,20 +49,24 @@ public class WxMsgServiceImpl implements WxMsgService {
     private WxMpService wxMpService;
 
     @Autowired
-    private HttpServletResponse response;
+    private WebSocketService webSocketService;
 
     @Value("${wx.mp.callback}")
     private String callback;
 
     private static final String URL = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=%s&redirect_uri=%s&response_type=code&scope=snsapi_userinfo&state=STATE#wechat_redirect";
 
+    // 等待用户授权
     private static final ConcurrentHashMap<String, Integer> WAIT_AUTHORIZE_MAP = new ConcurrentHashMap<>();
 
 
+    @SneakyThrows
     @Override
+    @Transactional(propagation = Propagation.REQUIRED, rollbackFor = Exception.class)
     public WxMpXmlOutMessage scan(WxMpXmlMessage wxMpXmlMessage) {
         // 获取用户openId ==> 唯一标识一个微信用户
         String openId = wxMpXmlMessage.getFromUser();
+
         // 获取事件码
         Integer code = getEventKey(wxMpXmlMessage);
 
@@ -77,6 +79,8 @@ public class WxMsgServiceImpl implements WxMsgService {
         boolean authorized = registered && StrUtil.isNotBlank(wxUser.getAvatarUrl());
 
         if (registered && authorized) {
+            // 登录成功
+            webSocketService.loginScanSuccess(code, openId);
             return new TextBuilder().build("登录成功", wxMpXmlMessage, wxMpService);
         }
 
@@ -88,15 +92,13 @@ public class WxMsgServiceImpl implements WxMsgService {
         // 绑定等待授权登录状态
         WAIT_AUTHORIZE_MAP.put(openId, code);
 
-        String text = "<a href=\"%s\">同意授权</a>"
-            .formatted(String.format(URL,
-                wxMpService.getWxMpConfigStorage().getAppId(),
-                URLEncoder.encode(callback + "/wx/callback")));
-
-        return new TextBuilder().build(text, wxMpXmlMessage, wxMpService);
+        return new TextBuilder().build("<a href=\"%s\">同意授权</a>".formatted(String.format(URL,
+                wxMpService.getWxMpConfigStorage().getAppId(), URLEncoder.encode(callback + "/wx/callback"))),
+            wxMpXmlMessage, wxMpService);
     }
 
     @Override
+    @Transactional(propagation = Propagation.REQUIRED, rollbackFor = Exception.class)
     public void authorize(WxOAuth2UserInfo userInfo) {
         // 获取用户信息
         String openId = userInfo.getOpenid();
@@ -105,10 +107,14 @@ public class WxMsgServiceImpl implements WxMsgService {
         int update = wxUserMapper.update(wxUser, new LambdaQueryWrapper<WxUser>().eq(WxUser::getOpenid, openId));
         AssertUtil.isTrue(update == 1, "更新微信用户失败");
 
+        // 通过openId获取对应的code，然后通知登录成功
+        webSocketService.loginScanSuccess(WAIT_AUTHORIZE_MAP.get(openId), openId);
+
         // 取消绑定的微信用户验证状态
         WAIT_AUTHORIZE_MAP.remove(openId);
+
         // 通知用户登录成功
-        sendMsg("登录成功");
+        sendMsg("登录成功", openId);
     }
 
     /**
@@ -117,25 +123,19 @@ public class WxMsgServiceImpl implements WxMsgService {
      * @param msg
      */
     @SneakyThrows
-    private void sendMsg(String msg) {
-        response.setStatus(HttpServletResponse.SC_OK);
-        response.setContentType("text/html;charset=UTF-8");
-        response.getWriter().write(
-            """
-                <html>
-                    <head>
-                        <meta charset="UTF-8">
-                    </head>
-                    <body>
-                        <h1>%s</h1>
-                    </body>
-                </html>
-                """.formatted(msg));
+    private void sendMsg(String msg, String openId) {
+        wxMpService.getKefuService().sendKefuMessage(WxMpKefuMessage
+            .TEXT()
+            .toUser(openId)
+            .content(msg)
+            .build());
     }
 
     private Integer getEventKey(WxMpXmlMessage wxMpXmlMessage) {
         try {
-            return Integer.parseInt(wxMpXmlMessage.getEventKey());
+            String key = wxMpXmlMessage.getEventKey();
+            String code = key.replace("qrscene_", "");
+            return Integer.parseInt(code);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
